@@ -11,12 +11,12 @@ INCLUDES = -DPIXMAPDIR=\"${datadir}/pixmaps/\" \
 	-DLOCALE_DIR=\"${datadir}/locale/\" \
 	-DDATADIR=\"${datadir}/psemu/\" \
 	$(GTK2_CFLAGS) $(GLADE2_CFLAGS) -I/usr/X11R6/include \
-	-I../../include -I../../libpcsxcore `$(SDL_CONFIG) --cflags`
+	-I../../include -I../../libpcsxcore $(SDL_CFLAGS)
 
 bin_PROGRAMS = cfgDFInput
 cfgDFInput_SOURCES = cfg-gtk2.c pad.h
 cfgDFInput_LDADD = $(GTK2_LIBS) $(GLADE2_LIBS)
-cfgDFInput_LDFLAGS = `$(SDL_CONFIG) --libs`
+cfgDFInput_LDFLAGS = $(SDL_LIBS)
 
 glade_DATA = dfinput.glade2
 gladedir = $(datadir)/psemu/
